<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/buttonshape_white_border_gray"
    android:layout_margin="2dp"
    android:id="@+id/linear_list"
    android:padding="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            android:text="@string/txt_contract_us"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">
        <TextView
            android:id="@+id/txt_project"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:text="@string/txt_call_center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:text="@string/txt_tel"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:textSize="@dimen/font_18"
            android:text="@string/txt_phone_number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            android:text="@string/txt_apl_version"/>
        <TextView
            android:id="@+id/txt_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:textSize="@dimen/font_18"
            android:text="1.0.0"/>
    </LinearLayout>

</LinearLayout>