<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="@dimen/padding_30"
            android:background="@drawable/buttonshape_white_border_gray"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layoutStaff"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_login">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="0.5">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/ic_login"
                        android:layout_height="@dimen/ic_login"
                        android:background="@drawable/ic_user_name_ico"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintLogin"
                    android:textSize="@dimen/font_20"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/DarkGray"
                    android:layout_weight="4.5" />

            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layoutStaff"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_login">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="0.5">
                    <ImageView
                        android:layout_width="@dimen/ic_login"
                        android:layout_height="@dimen/ic_login"
                        android:background="@drawable/ic_password_ico"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintPassword"
                    android:textSize="@dimen/font_20"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/DarkGray"
                    android:layout_weight="4.5" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_5"
                android:padding="@dimen/padding_login"
                android:weightSum="3">
                <CheckBox
                    android:id="@+id/chk_remember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:checked="false"
                    android:textColor="@color/DarkGray"
                    android:text="@string/txtRemember" />
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_log_in"
                    android:layout_weight="1.3"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
