<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/llLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:text="@string/txtLanguage"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="10dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:weightSum="3">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#cccccc"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:text="@string/txtCalendar"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="10dp"
            android:id="@+id/tvCalendar"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:weightSum="3">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#cccccc"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDateFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingRight="2dp"
            android:text="@string/txtDateFormat"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="10dp"
            android:id="@+id/tvDateFormat"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:weightSum="3">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#cccccc"
            android:padding="20dp" />
    </LinearLayout>

</LinearLayout>